--- a/source/css/_parts/tags.styl
+++ b/source/css/_parts/tags.styl
@@ -58,19 +58,17 @@
     }
     .post-preview {
         position: relative;
-        > a {
-            .post-title {
-                font-size: 16px;
-                font-weight: 500;
-                margin-top: 20px;
-            }
-            .post-subtitle {
-                font-size: 15px;
-                padding-top: 5px;
-                font-weight: 400;
-            }
+        .post-title {
+            font-size: 16px;
+            font-weight: 500;
+            margin-top: 20px;
         }
-        > .post-meta {
+        .post-subtitle {
+            font-size: 15px;
+            padding-top: 5px;
+            font-weight: 400;
+        }
+        .post-meta {
             position: absolute;
             right: 5px;
             bottom: 0;
@@ -84,13 +82,11 @@
 @media only screen and (min-width: 768px) {
     .one-tag-list .post-preview {
         margin-left: 20px;
-        > a {
-            > .post-title {
-                font-size: 18px;
-                line-height: 1.3;
-            }
-            > .post-subtitle {font-size: 15px;}
+        .post-title {
+            font-size: 18px;
+            line-height: 1.3;
         }
+        .post-subtitle {font-size: 15px;}
         .post-meta {font-size: 18px;}
     }
 }
