--- a/source/css/main.styl
+++ b/source/css/main.styl
@@ -2,7 +2,9 @@ $MainFontFamily = -apple-system, "Helvetica Neue", "PingFang SC", "Hiragino Sans
 
 $SerifFontFamily = "Lora","FF Tisa","Freight Text","Times New Roman"
 
-$MonospaceFontFamily = Consolas, Menlo, monospace
+$MonospaceFontFamily = "Consolas", "Menlo", monospace
+
+$TitleFont = "Ubuntu","WenQuanYi Micro Hei","Microsoft YaHei","SimHei"
 
 @import '_parts/base'
 @import '_parts/navbar'
