--- a/source/css/specialize/preview.styl
+++ b/source/css/specialize/preview.styl
@@ -59,7 +59,7 @@
         /*诗词标题*/
         .post-title {
             font-size: 35px;
-            font-family:  STKaiti;
+            font-family:  $TitleFont;
             color: rgba(0,0,0,.8);
         }
         .post-meta {color: #0e2231;}
