--- a/source/css/_parts/page/preview.styl
+++ b/source/css/_parts/page/preview.styl
@@ -4,7 +4,7 @@
         line-height: 1.3;
         margin-top: 30px;
         margin-bottom: 0;
-        font-family: STSong;
+        font-family: $TitleFont;
         text-shadow: 0 0 1px rgba(0,0,0,.15);
     }
     .post-link, #first-post .post-link {
