--- a/source/css/_parts/unknown.styl
+++ b/source/css/_parts/unknown.styl
@@ -72,3 +72,7 @@
 .t:first-child {
     margin-top: 0;
 }
+
+form .row:first-child .floating-label-form-group {
+    border-top: 1px solid #eeeeee;
+}
