--- a/source/css/main.styl
+++ b/source/css/main.styl
@@ -1,10 +1,4 @@
-$MainFontFamily = -apple-system, "Helvetica Neue", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif
-
-$SerifFontFamily = "Lora","FF Tisa","Freight Text","Times New Roman"
-
-$MonospaceFontFamily = "Consolas", "Menlo", monospace
-
-$TitleFont = "Ubuntu","WenQuanYi Micro Hei","Microsoft YaHei","SimHei"
+@import '_parts/variable'
 
 @import '_parts/base'
 @import '_parts/navbar'
